updated ipynb files

--- a/ipynb/experiment_analytic_mcd_30k/cauchy_10d_n01_tune.ipynb
+++ b/ipynb/experiment_analytic_mcd_30k/cauchy_10d_n01_tune.ipynb
@@ -65,7 +65,7 @@
     "     keras.optimizers.Adamax(learning_rate=7e-3)]\n",
     "}\n",
     "\n",
-    "optimal_schedules = [\n",
+    "scan_schedule = [\n",
     "    {\n",
     "        \"optimizer\": keras.optimizers.Nadam(learning_rate=3e-5),\n",
     "        \"learning_rate\": 3e-5,\n",
@@ -2779,7 +2779,7 @@
     "scan_results = []\n",
     "champion_params = None\n",
     "champion_loss = np.inf\n",
-    "for params in optimal_schedules:\n",
+    "for params in scan_schedule:\n",
     "    lr = params[\"learning_rate\"]\n",
     "    for learning_rate in [0.8*lr, lr, 1.2*lr]:\n",
     "        optimizer = params[\"optimizer\"]\n",
