ipython notebooks using refatored experiment functionality.

--- a/ipynb/experiment_analytic_mcd_30k/cauchy_10d_n01_tune_short.ipynb
+++ b/ipynb/experiment_analytic_mcd_30k/cauchy_10d_n01_tune_short.ipynb
@@ -21,7 +21,7 @@
     "from uncertainty_testbed.utilities.functions import map_to_constant\n",
     "from experiments.experiment_utils import generate_full, hyperparameter_scan, train_from_params, plot_training_curves, \\\n",
     "    get_smoothed_scores_probs_preds, plot_xy, plot_hist, plot_x1y1x2y2, plot_hexbin, plot_decision_data\n",
-    "from experiments.model_templates import SequentialDropout_10_60_025_x3_Template"
+    "from experiments.model_templates import SequentialDropout_10_60_025_x3_ScanTemplate"
    ]
   },
   {
@@ -273,13 +273,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3973 - accuracy: 0.8385 - auc: 0.9083 - val_loss: 0.3101 - val_accuracy: 0.9115 - val_auc: 0.9514\n",
       "Epoch 93/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3969 - accuracy: 0.8387 - auc: 0.9081 - val_loss: 0.3095 - val_accuracy: 0.9118 - val_auc: 0.9515\n",
-      "Epoch 94/119\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 94/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3937 - accuracy: 0.8418 - auc: 0.9105 - val_loss: 0.3086 - val_accuracy: 0.9117 - val_auc: 0.9516\n",
       "Epoch 95/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3951 - accuracy: 0.8431 - auc: 0.9098 - val_loss: 0.3081 - val_accuracy: 0.9123 - val_auc: 0.9517\n",
@@ -468,13 +462,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3824 - accuracy: 0.8487 - auc: 0.9158 - val_loss: 0.3032 - val_accuracy: 0.9125 - val_auc: 0.9528\n",
       "Epoch 65/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3826 - accuracy: 0.8504 - auc: 0.9163 - val_loss: 0.3023 - val_accuracy: 0.9130 - val_auc: 0.9529\n",
-      "Epoch 66/119\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 66/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3866 - accuracy: 0.8488 - auc: 0.9151 - val_loss: 0.3016 - val_accuracy: 0.9134 - val_auc: 0.9530\n",
       "Epoch 67/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3832 - accuracy: 0.8488 - auc: 0.9161 - val_loss: 0.3009 - val_accuracy: 0.9139 - val_auc: 0.9532\n",
@@ -663,13 +651,7 @@
       "130/130 [==============================] - 0s 3ms/step - loss: 0.4210 - accuracy: 0.8221 - auc: 0.8965 - val_loss: 0.3295 - val_accuracy: 0.9020 - val_auc: 0.9479\n",
       "Epoch 37/119\n",
       "130/130 [==============================] - 0s 3ms/step - loss: 0.4196 - accuracy: 0.8232 - auc: 0.8968 - val_loss: 0.3280 - val_accuracy: 0.9021 - val_auc: 0.9481\n",
-      "Epoch 38/119\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 38/119\n",
       "130/130 [==============================] - 0s 3ms/step - loss: 0.4222 - accuracy: 0.8234 - auc: 0.8955 - val_loss: 0.3264 - val_accuracy: 0.9026 - val_auc: 0.9484\n",
       "Epoch 39/119\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.4165 - accuracy: 0.8261 - auc: 0.8989 - val_loss: 0.3247 - val_accuracy: 0.9037 - val_auc: 0.9488\n",
@@ -858,13 +840,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.6950 - accuracy: 0.5260 - auc: 0.5354 - val_loss: 0.6859 - val_accuracy: 0.5533 - val_auc: 0.5785\n",
       "Epoch 9/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.6930 - accuracy: 0.5316 - auc: 0.5436 - val_loss: 0.6843 - val_accuracy: 0.5645 - val_auc: 0.5935\n",
-      "Epoch 10/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 10/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.6931 - accuracy: 0.5306 - auc: 0.5430 - val_loss: 0.6826 - val_accuracy: 0.5748 - val_auc: 0.6079\n",
       "Epoch 11/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.6910 - accuracy: 0.5337 - auc: 0.5490 - val_loss: 0.6809 - val_accuracy: 0.5840 - val_auc: 0.6222\n",
@@ -1054,13 +1030,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3998 - accuracy: 0.8410 - auc: 0.9082 - val_loss: 0.3113 - val_accuracy: 0.9130 - val_auc: 0.9514\n",
       "Epoch 101/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3979 - accuracy: 0.8435 - auc: 0.9093 - val_loss: 0.3105 - val_accuracy: 0.9136 - val_auc: 0.9515\n",
-      "Epoch 102/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 102/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3945 - accuracy: 0.8446 - auc: 0.9106 - val_loss: 0.3097 - val_accuracy: 0.9135 - val_auc: 0.9517\n",
       "Epoch 103/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3976 - accuracy: 0.8456 - auc: 0.9097 - val_loss: 0.3091 - val_accuracy: 0.9139 - val_auc: 0.9518\n",
@@ -1250,13 +1220,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3413 - accuracy: 0.8709 - auc: 0.9323 - val_loss: 0.2725 - val_accuracy: 0.9205 - val_auc: 0.9582\n",
       "Epoch 193/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3333 - accuracy: 0.8789 - auc: 0.9353 - val_loss: 0.2720 - val_accuracy: 0.9206 - val_auc: 0.9582\n",
-      "Epoch 194/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 194/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3389 - accuracy: 0.8750 - auc: 0.9330 - val_loss: 0.2719 - val_accuracy: 0.9202 - val_auc: 0.9583\n",
       "Epoch 195/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3351 - accuracy: 0.8754 - auc: 0.9347 - val_loss: 0.2717 - val_accuracy: 0.9204 - val_auc: 0.9584\n",
@@ -1445,13 +1409,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.5510 - accuracy: 0.7232 - auc: 0.8004 - val_loss: 0.4763 - val_accuracy: 0.8470 - val_auc: 0.9193\n",
       "Epoch 35/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.5451 - accuracy: 0.7295 - auc: 0.8056 - val_loss: 0.4657 - val_accuracy: 0.8530 - val_auc: 0.9231\n",
-      "Epoch 36/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 36/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.5402 - accuracy: 0.7317 - auc: 0.8097 - val_loss: 0.4554 - val_accuracy: 0.8580 - val_auc: 0.9267\n",
       "Epoch 37/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.5386 - accuracy: 0.7363 - auc: 0.8104 - val_loss: 0.4463 - val_accuracy: 0.8618 - val_auc: 0.9299\n",
@@ -1641,13 +1599,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3542 - accuracy: 0.8666 - auc: 0.9276 - val_loss: 0.2803 - val_accuracy: 0.9193 - val_auc: 0.9567\n",
       "Epoch 127/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3540 - accuracy: 0.8644 - auc: 0.9275 - val_loss: 0.2799 - val_accuracy: 0.9190 - val_auc: 0.9568\n",
-      "Epoch 128/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 128/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3551 - accuracy: 0.8667 - auc: 0.9269 - val_loss: 0.2796 - val_accuracy: 0.9187 - val_auc: 0.9568\n",
       "Epoch 129/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3571 - accuracy: 0.8659 - auc: 0.9267 - val_loss: 0.2796 - val_accuracy: 0.9187 - val_auc: 0.9569\n",
@@ -1837,13 +1789,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3116 - accuracy: 0.8817 - auc: 0.9429 - val_loss: 0.2602 - val_accuracy: 0.9233 - val_auc: 0.9618\n",
       "Epoch 219/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3151 - accuracy: 0.8816 - auc: 0.9419 - val_loss: 0.2600 - val_accuracy: 0.9230 - val_auc: 0.9618\n",
-      "Epoch 220/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 220/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3145 - accuracy: 0.8799 - auc: 0.9421 - val_loss: 0.2598 - val_accuracy: 0.9234 - val_auc: 0.9619\n",
       "Epoch 221/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3154 - accuracy: 0.8814 - auc: 0.9417 - val_loss: 0.2596 - val_accuracy: 0.9238 - val_auc: 0.9619\n",
@@ -2032,13 +1978,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.4384 - accuracy: 0.8117 - auc: 0.8852 - val_loss: 0.3317 - val_accuracy: 0.9094 - val_auc: 0.9506\n",
       "Epoch 61/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.4356 - accuracy: 0.8157 - auc: 0.8879 - val_loss: 0.3292 - val_accuracy: 0.9100 - val_auc: 0.9507\n",
-      "Epoch 62/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 62/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.4318 - accuracy: 0.8165 - auc: 0.8895 - val_loss: 0.3267 - val_accuracy: 0.9114 - val_auc: 0.9510\n",
       "Epoch 63/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.4287 - accuracy: 0.8199 - auc: 0.8916 - val_loss: 0.3242 - val_accuracy: 0.9117 - val_auc: 0.9512\n",
@@ -2228,13 +2168,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3369 - accuracy: 0.8701 - auc: 0.9335 - val_loss: 0.2703 - val_accuracy: 0.9206 - val_auc: 0.9597\n",
       "Epoch 153/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3342 - accuracy: 0.8721 - auc: 0.9349 - val_loss: 0.2703 - val_accuracy: 0.9205 - val_auc: 0.9597\n",
-      "Epoch 154/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 154/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3334 - accuracy: 0.8719 - auc: 0.9350 - val_loss: 0.2699 - val_accuracy: 0.9204 - val_auc: 0.9598\n",
       "Epoch 155/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3331 - accuracy: 0.8726 - auc: 0.9353 - val_loss: 0.2700 - val_accuracy: 0.9197 - val_auc: 0.9598\n",
@@ -2424,13 +2358,7 @@
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3111 - accuracy: 0.8798 - auc: 0.9427 - val_loss: 0.2593 - val_accuracy: 0.9208 - val_auc: 0.9623\n",
       "Epoch 245/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3084 - accuracy: 0.8816 - auc: 0.9435 - val_loss: 0.2591 - val_accuracy: 0.9208 - val_auc: 0.9623\n",
-      "Epoch 246/249\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 246/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3099 - accuracy: 0.8805 - auc: 0.9431 - val_loss: 0.2589 - val_accuracy: 0.9207 - val_auc: 0.9623\n",
       "Epoch 247/249\n",
       "130/130 [==============================] - 0s 2ms/step - loss: 0.3103 - accuracy: 0.8834 - auc: 0.9432 - val_loss: 0.2588 - val_accuracy: 0.9204 - val_auc: 0.9624\n",
@@ -2601,13 +2529,7 @@
       "4160/4160 [==============================] - 7s 2ms/step - loss: 0.3790 - accuracy: 0.8559 - auc: 0.9191 - val_loss: 0.2902 - val_accuracy: 0.9172 - val_auc: 0.9532\n",
       "Epoch 9/10\n",
       "4160/4160 [==============================] - 7s 2ms/step - loss: 0.3634 - accuracy: 0.8639 - auc: 0.9252 - val_loss: 0.2872 - val_accuracy: 0.9142 - val_auc: 0.9539\n",
-      "Epoch 10/10\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 10/10\n",
       "4160/4160 [==============================] - 7s 2ms/step - loss: 0.3546 - accuracy: 0.8690 - auc: 0.9289 - val_loss: 0.2799 - val_accuracy: 0.9208 - val_auc: 0.9550\n",
       "{'learning_rate': 0.1, 'batch': 8, 'epoch': 6, 'optimizer': 'adadelta', 'best_loss': {'loss': 0.2799382209777832, 'epoch': 10}, 'best_auc': {'auc': 0.955005407333374, 'epoch': 10}, 'best_accuracy': {'accuracy': 0.9207500219345093, 'epoch': 10}}\n",
       "Epoch 1/10\n",
@@ -2792,7 +2714,7 @@
    ],
    "source": [
     "# In[3]:\n",
-    "template = SequentialDropout_10_60_025_x3_Template()  # define model structure and hyperparameter scan schedule\n",
+    "template = SequentialDropout_10_60_025_x3_ScanTemplate()  # define model structure and hyperparameter scan schedule\n",
     "champion_params, scan_results = hyperparameter_scan(template, data)  # perform hyperparameter scan, return winning parameters"
    ]
   },
@@ -2896,7 +2818,7 @@
     }
    ],
    "source": [
-    "plot_xy(scores, p, 'latent scores', 'p_hat', '--b')\n",
+    "plot_xys(scores, ((p, '--b'),), 'latent scores', 'p_hat')\n",
     "plot_hist(scores, 50, 'latent scores')"
    ]
   },
@@ -2932,7 +2854,7 @@
     }
    ],
    "source": [
-    "plot_x1y1x2y2(probs, probs, probs, p, 'p', 'p_hat', '--g', '--b')\n",
+    "plot_xys(probs, ((probs, '--g'), (p, '--b')), 'p', 'p_hat')\n",
     "plot_hist(x=probs, bins=50, xlabel='p', color='g', alpha=0.5)"
    ]
   },
